fixed alignment problems in both home page and checkout.

--- a/css/checkout.css
+++ b/css/checkout.css
@@ -15,7 +15,8 @@
 }
 .header-divisions {
   height: 100%;
-  margin: 0 195px;
+  margin: 0 auto;
+  width: 1170px;
   display: flex;
   flex-direction: column;
 }
@@ -83,18 +84,19 @@
   margin-bottom: 80px;
 }
 .two-divisions {
-  display: flex;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  width: 1170px;
+  margin: 0 auto;
 }
-.sub-container {
-  display: flex;
+/* .-container {
+sub  display: flex;
   flex-direction: column;
-  margin-left: 190px;
-}
+  margin-right: 20px;
+} */
 .right-form {
   display: flex;
   flex-direction: column;
-  margin-right: 190px;
   margin-top: 90px;
 }
 .address {
@@ -102,7 +104,7 @@
   margin-bottom: 25px;
 }
 .notes {
-  width: 750px;
+  width: 100%;
   height: 65px;
   margin-bottom: 55px;
   border: 1px solid #e1e1e1;
@@ -116,21 +118,22 @@
   padding-bottom: 25px;
   border-bottom: 1px solid #e1e1e1;
   margin-bottom: 20px;
-  width: 750px;
+  width: 100%;
 }
 .order-details {
   display: flex;
   border-bottom: 1px solid #e1e1e1;
-  width: 750px;
+  width: 100%;
 }
 .product-name {
-  margin-right: 115px;
   letter-spacing: 1px;
+  margin-right: auto;
 }
 .product-name h6 {
   font-size: 16px;
   font-weight: 400;
   margin-bottom: 10px;
+  width: 250px;
   color: #666666;
 }
 .product-name p {
@@ -145,7 +148,7 @@
 .part2 {
   margin-top: 25px;
   margin-bottom: 25px;
-  width: 750px;
+  width: 100%;
 }
 
 .address input {
@@ -169,9 +172,15 @@
 .first-line {
   display: flex;
   margin-bottom: 50px;
+  width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .into1 {
-  margin-right: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 30%;
 }
 .cust {
   margin-top: auto;
@@ -195,7 +204,7 @@
 .last-name,
 .email-address,
 .phone {
-  width: 365px;
+  width: 100%;
   margin-right: 25px;
   height: 40px;
   margin-bottom: 25px;
@@ -217,7 +226,7 @@
 .payment p {
   margin-top: 10px;
   margin-left: 25px;
-  width: 753px;
+  width: 94%;
   margin-bottom: 25px;
   font-size: 16px;
   color: #999999;
@@ -274,7 +283,7 @@
 .company,
 .country {
   height: 40px;
-  width: 753px;
+  width: 96%;
   margin-bottom: 25px;
 }
 .input-coupon {
